# rishi

./: CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  sitemap.xml  skill-commonmark.md  skill.html
.gheasy/: config.json
docs/superpowers/plans/: 2026-07-14-litert-fastllm-chat.md
docs/superpowers/specs/: 2026-07-14-litert-fastllm-chat-design.md
examples/: buzz_agent_e2e.py
nbs/: 00_core.ipynb  01_llama.ipynb  01_mcp.ipynb  02_litert.ipynb  02_serve.ipynb  index.ipynb  nbdev.yml  skill.md
rishi/: __init__.py  _modidx.py  core.py  litert.py  llama.py  mcp.py  serve.py  skill.md
